--- a/app/views/shared/_new_practice_part_dialog.html.erb
+++ b/app/views/shared/_new_practice_part_dialog.html.erb
@@ -1,4 +1,4 @@
-<div id='new_practice_part_dialog' style='display:none' title='Add a new anga'>
+<div id='new_practice_part_dialog' style='display:none' title='<%= t('shared.new_practice_part_dialog.title') %>'>
   <%= render :partial => 'practice_parts/dialog_form' %>
 </div>
 <%= javascript_tag do %>
