--- a/app/views/practices/_practice_info_dialog_form.html.erb
+++ b/app/views/practices/_practice_info_dialog_form.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="field description">
-    <%= Practice.human_attribute_name :description %><%= field_help t('practice.help.description') %><br/>
+    <%= Practice.human_attribute_name :description %><%= field_help t('practice.help.description') %>
     <br />
     <%= f.text_area :description %>
   </div>
