--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -319,6 +319,13 @@ span#jeditable_description input {
   height: 460px;
 }
 
+#main_panel h2 {
+    background: none repeat scroll 0 0 white;
+    position: absolute;
+    top: 0;
+    width: 29.9%;
+}
+
 #info_panel {
   display: inline-block;
   float: left;
