use medium size photo

--- a/app/views/admin/techniques/show.html.erb
+++ b/app/views/admin/techniques/show.html.erb
@@ -15,7 +15,7 @@
 
 <p>
   <b>Photo:</b>
-  <%= image_tag @technique.photo.url %>
+  <%= image_tag @technique.photo.url(:medium) %>
 </p>
 
 <%= link_to 'Edit', edit_admin_technique_path(@technique) %> |
