--- a/app/views/techniques/_technique_dialog.html.erb
+++ b/app/views/techniques/_technique_dialog.html.erb
@@ -1,2 +1,2 @@
-<%= image_tag technique.photo.url(:original, false) %>
+<%= image_tag technique.photo.url(:medium, false) %>
 <p><%= technique.description %></p>
