--- a/app/views/admin/techniques/_form.html.erb
+++ b/app/views/admin/techniques/_form.html.erb
@@ -16,7 +16,7 @@
 
   <div class="field">
     <%= f.label :photo %><br />
-    <%= image_tag @technique.photo.url if @technique.photo.present? %>
+    <%= image_tag @technique.photo.url(:medium) if @technique.photo.present? %>
     <%= f.file_field :photo %>
   </div>
 
