--- a/app/views/admin/techniques/index.html.erb
+++ b/app/views/admin/techniques/index.html.erb
@@ -3,6 +3,8 @@
 <table>
   <tr>
     <th>Type</th>
+    <th>Code</th>
+    <th>Parent</th>
     <th>Image</th>
     <th>Name</th>
     <th>Description</th>
@@ -14,6 +16,8 @@
 <% @techniques.each do |technique| %>
   <tr>
     <td><%= technique.technique_type.name %></td>
+    <td><%= technique.code %></td>
+    <td><%= technique.parent.name if technique.parent %></td>
     <td><%= image_tag technique.photo.url(:thumb, false) %></td>
     <td><%= technique.name %></td>
     <td><%= technique.description %></td>
@@ -21,6 +25,19 @@
     <td><%= link_to 'Edit', edit_admin_technique_path(technique) %></td>
     <td><%= link_to 'Destroy', [:admin, technique], :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
+  <% technique.children.each do |child| %>
+  <tr>
+    <td><%= child.technique_type.name %></td>
+    <td><%= child.code %></td>
+    <td><%= child.parent.name if child.parent %></td>
+    <td><%= image_tag child.photo.url(:thumb, false) %></td>
+    <td><%= child.name %></td>
+    <td><%= child.description %></td>
+    <td><%= link_to 'Show', [:admin, child] %></td>
+    <td><%= link_to 'Edit', edit_admin_technique_path(child) %></td>
+    <td><%= link_to 'Destroy', [:admin, child], :confirm => 'Are you sure?', :method => :delete %></td>
+  </tr>
+  <% end %>
 <% end %>
 </table>
 
