--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -31,7 +31,7 @@
     <div class='ui-accordion ui-widget ui-helper-reset ui-accordion-icons'>
       <form id='quicksearch' method="get" class='ui-accordion-header ui-helper-reset ui-state-default ui-corner-all'>
         <div>
-          <input type="text" value="" name="q" id="q" />
+          <span class="ui-icon ui-icon-search"></span><input type="text" value="" name="q" id="q" />
         </div>
       </form>
     </div>
