--- a/app/views/practice_events/_fields.html.erb
+++ b/app/views/practice_events/_fields.html.erb
@@ -2,7 +2,7 @@
   <%= f.hidden_field :practice_id %>
 <% else %>
   <div class="field">
-    <%= f.label :practice_id %><% field_help t('practice_event.help.practice') %>
+    <%= f.label :practice %><%= field_help t('practice_event.help.practice') %>
     <br />
     <%= f.collection_select :practice_id, current_user.practices, :id, :name %>
     <% unless @practice_event.new_record? %>
@@ -12,7 +12,7 @@
   </div>
 <% end %>
 <div class="field">
-  <%= f.label :date %><% field_help t('practice_event.help.start') %>
+  <%= f.label :date %><%= field_help t('practice_event.help.start') %>
   <br />
   <%= f.text_field :start_string %>
 </div>
