--- a/app/views/practices/index.html.erb
+++ b/app/views/practices/index.html.erb
@@ -1,4 +1,4 @@
-<% if !@practices.empty? %>
+<% if @practices.empty? %>
   <div class="notice ui-state-highlight ui-corner-all">
     <p>
       <span class="ui-icon ui-icon-lightbulb" style="float: left; margin-right: .3em;"></span>
