fix style on calendar icon

--- a/app/views/practice_events/_fields.html.erb
+++ b/app/views/practice_events/_fields.html.erb
@@ -14,7 +14,7 @@
 <div class="field">
   <%= f.label :date %><%= field_help t('practice_event.help.start') %>
   <br />
-  <span class="ui-state-default"><span class="ui-icon ui-icon-calendar"></span></span><%= f.text_field :start_string %>
+  <span class="ui-icon ui-icon-calendar"></span><%= f.text_field :start_string %>
 </div>
 
 <%= javascript_tag do %>
