--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -198,10 +198,10 @@ div[aria-labelledby = 'ui-dialog-title-edit_profile_dialog'] .ui-dialog-content,
   text-align: center;
 }
 
-.ui-icon-calendar {
+.ui-widget-content .ui-icon.ui-icon-calendar {
   position: absolute;
   margin: 5px;
-  background-image: url(http://local.sadhana.com.ar/stylesheets/ui-lightness/images/ui-icons_222222_256x240.png);
+  background-image: url(http://local.sadhana.com.ar/stylesheets/ui-lightness/images/ui-icons_ef8c08_256x240.png);
 }
 
 #practice_event_start_string {
