--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -1,3 +1,7 @@
+<div id='tips'>
+  <%= render :partial => 'practice_tips' %>
+</div>
+
 <ul id='practice_actions' class='actions'>
   <li>
     <%= link_to t('actions.play'), play_practice_path, :class => 'blue medium awesome' %>
