--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -144,6 +144,7 @@
     <%= render :partial => 'shared/forgot_password_dialog' %>
     <% if user_signed_in? %>
       <%= render :partial => 'shared/edit_profile_dialog' %>
+      <%= render :partial => 'shared/plans_dialog' %>
     <% end %>
     <div id="jpId"></div>
   </body>
