refresh indexes on sort anga tabs and a dont delete the panel on delete tab

--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -191,6 +191,7 @@
                 dataType: 'script',
                 url: '<%= sort_practice_practice_parts_path(@practice) %>'
               });
+              $('#practice_parts').tabs('refreshPositions');
             }
     });
 
