--- a/app/views/admin/techniques/_form.html.erb
+++ b/app/views/admin/techniques/_form.html.erb
@@ -6,6 +6,10 @@
     <%= f.collection_select :technique_type_id, TechniqueType.all, :id, :name %>
   </div>
   <div class="field">
+    <%= f.label :parent %><br />
+    <%= f.collection_select :parent_id, Technique.where('parent_id is NULL').all, :id, :name %>
+  </div>
+  <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
