show last signin on admin

--- a/app/views/admin/subscriptions/index.html.erb
+++ b/app/views/admin/subscriptions/index.html.erb
@@ -7,6 +7,7 @@
     <th>State</th>
     <th>Balance</th>
     <th>Next Renewal</th>
+    <th>Last Signin</th>
     <th></th>
     <th></th>
     <th></th>
@@ -19,6 +20,7 @@
     <td><%= subscription.state %></td>
     <td><%= subscription.balance %></td>
     <td><%= subscription.next_renewal_on %></td>
+    <td><%= subscription.subscriber.last_sign_in_at %></td>
     <td><%= link_to 'Show', [:admin, subscription] %></td>
     <td><%= link_to 'Edit', edit_admin_subscription_path(subscription) %></td>
     <td><%= button_to 'Manual charge balance', manual_charge_admin_subscription_path(subscription) %></td>
