--- a/app/views/shared/_sign_in_dialog.html.erb
+++ b/app/views/shared/_sign_in_dialog.html.erb
@@ -1,5 +1,5 @@
 <div id='sign_in_dialog' style='display:none' title='<%= t('shared.sign_in_dialog.title') %>'>
-  <%= form_for(:user, :url => session_path(:user)) do |f| %>
+  <%= form_for(User.new, :url => session_path(:user)) do |f| %>
     <%= render :partial => 'shared/sign_in_fields', :locals => {:f => f} %>
   <% end %>
   <%= render :partial => "shared/registration_links", :locals => {:action => :sign_in} %>
