--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -1,14 +1,27 @@
-<h2><%= t('devise.invitations.edit.title') %></h2>
+<div class="notice ui-state-highlight ui-corner-all">
+<p>
+  <span class="ui-icon ui-icon-lightbulb" style="float: left; margin-right: .3em;"></span>
+  <%= t('devise.invitations.edit.setup_password') %>
+</p>
+</div>
+<%= render :partial => 'shared/functionalities_slideshow' %>
+<div class="page-content">
+    <h2><%= t('devise.invitations.edit.title') %></h2>
 
-<%= form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => { :method => :put } do |f| %>
-  <%= f.error_messages %>
-  <%= f.hidden_field :invitation_token %>
+    <%= form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => { :method => :put } do |f| %>
+      <%= f.error_messages %>
+      <%= f.hidden_field :invitation_token %>
 
-  <p><%= f.label :password %></p>
-  <p><%= f.password_field :password %></p>
+      <div class="field">
+        <%= f.label :password %><br/>
+        <%= f.password_field :password %>
+      </div>
 
-  <p><%= f.label :password_confirmation %></p>
-  <p><%= f.password_field :password_confirmation %></p>
+      <div>
+        <%= f.label :password_confirmation %><br/>
+        <%= f.password_field :password_confirmation %>
+      </div>
 
-  <p><%= f.submit t('devise.invitations.edit.submit') %></p>
-<% end %>
+      <p><%= f.submit t('devise.invitations.edit.submit'), :class => 'awesome medium blue' %></p>
+    <% end %>
+</div>
