--- a/app/views/shared/_sign_in_fields.html.erb
+++ b/app/views/shared/_sign_in_fields.html.erb
@@ -6,7 +6,7 @@
 <%= f.label :password %><br/>
 <%= f.password_field :password %>
 </div>
-<% if devise_mapping && devise_mapping.rememberable? %>
+<% if @user %>
 <div class='field'>
   <%= f.check_box :remember_me %> <%= f.label :remember_me %>
 </div>
