fix display issues on chrome while dragging techniques

--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -73,6 +73,10 @@
   text-align: center;
 }
 
+.technique.ui-draggable-dragging{
+  display: table;
+}
+
 #technique_dialog {
   text-align: center;
   overflow: hidden;
