admin technique translations

--- a/app/views/admin/techniques/_form.html.erb
+++ b/app/views/admin/techniques/_form.html.erb
@@ -9,15 +9,20 @@
     <%= f.label :parent %><br />
     <%= f.collection_select :parent_id, Technique.where('parent_id is NULL').all, :id, :name %>
   </div>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
+  <div class="field" id="name_field">
+    <%= f.fields_for :translations do |ft| %>
+      <%= ft.label :name %> (<%= ft.object.locale %>)<br />
+      <%= ft.text_field :name %>
+      <%= ft.label :description %> (<%= ft.object.locale %>)<br />
+      <%= ft.text_area :description %>
 
+      <% unless ft.object.new_record? %>
+        <%= ft.check_box '_destroy' %>
+        <%= ft.label '_destroy', 'Remove' %>
+      <% end %><br/>
+    <% end %>
+    <%= link_to_function 'Add translation', "$('#add_translation_link').before('#{ escape_javascript render :partial => 'translation_form', :locals => {:f => f, :translation => @technique.translations.new}}')", :id => 'add_translation_link' %>
+  </div>
   <div class="field">
     <%= f.label :photo %><br />
     <%= image_tag @technique.photo.url(:medium) if @technique.photo.present? %>
