invite more friends

--- a/app/views/shared/_notifications.html.erb
+++ b/app/views/shared/_notifications.html.erb
@@ -3,7 +3,7 @@
       <div class='notice ui-state-highlight ui-corner-all'>
         <p>
           <span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-          <%= notice %>
+          <%= notice.html_safe %>
         </p>
       </div>
   <% end %>
