--- a/public/stylesheets/contacts.css
+++ b/public/stylesheets/contacts.css
@@ -5,10 +5,14 @@
 }
 
 .contact {
-  padding-left: 10px;
+  padding: 15px;
   border: solid 1px #ccc;
   margin-top: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   background: #fff;
+}
+
+.contact h3 {
+  margin-top: 0px;
 }
